# crud-server-template

./: Cargo.toml  README.md  Rocket.toml.sample  diesel.toml
migrations/2022-09-08-162549_create_tables/: down.sql  up.sql
src/: main.rs
src/database/: mod.rs  models.rs  schema.rs
