[package]
name = "crud-server-template"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.85"
diesel = { version = "2.0.0", features = [
    "chrono",
    "postgres",
    "serde_json",
    "r2d2",
] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rocket = { version = "0.5.0-rc.2", path = "../Rocket/core/lib", features = [
    "json",
] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", path = "../Rocket/contrib/sync_db_pools/lib", features = [
    "diesel_postgres_pool",
] }
